--- a/ci/kaniko/Dockerfile
+++ b/ci/kaniko/Dockerfile
@@ -4,4 +4,4 @@ COPY jinja2_render.py /jinja2_render.py
 
 FROM gcr.io/kaniko-project/executor:debug
 COPY --from=0 / /python3.7-slim-stretch
-COPY kaniko/render_key /render_key
+COPY kaniko/convert-google-application-credentials-to-kaniko-auth-config /convert-google-application-credentials-to-kaniko-auth-config
