--- a/build.yaml
+++ b/build.yaml
@@ -622,6 +622,17 @@ steps:
       - service_base_image
       - merge_code
   - kind: buildImage2
+    name: hail_kaniko_image
+    dockerFile: /io/repo/ci/kaniko/Dockerfile
+    contextPath: /io/repo/ci
+    publishAs: hail-kaniko
+    inputs:
+      - from: /repo/ci
+        to: /io/repo/ci
+    dependsOn:
+      - service_base_image
+      - merge_code
+  - kind: buildImage2
     name: ci_utils_image
     dockerFile: /io/ci/Dockerfile.ci-utils
     contextPath: /io/ci
@@ -2982,6 +2993,7 @@ steps:
       - create_ci_test_repo
       - deploy_ci_agent
       - create_certs
+      - hail_kaniko_image
   - kind: runImage
     name: test_ci
     image:
