--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -133,6 +133,20 @@ steps:
       - default_ns
       - create_certs_image
   - kind: buildImage2
+    name: hail_kaniko_image
+    dockerFile: /io/repo/ci/kaniko/Dockerfile
+    contextPath: /io/repo/ci
+    publishAs: hail-kaniko
+    resources:
+      memory: highmem
+      storage: 10GiB
+    inputs:
+      - from: /repo/ci
+        to: /io/repo/ci
+    dependsOn:
+      - service_base_image
+      - merge_code
+  - kind: buildImage2
     name: hello_image
     dockerFile: /io/repo/ci/test/resources/Dockerfile
     contextPath: /io/repo
