--- a/build.yaml
+++ b/build.yaml
@@ -628,7 +628,7 @@ steps:
     publishAs: hail-kaniko
     resources:
       memory: highmem
-      storage: 10GiB
+      storage: 10Gi
     inputs:
       - from: /repo/ci
         to: /io/repo/ci
