--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -139,7 +139,7 @@ steps:
     publishAs: hail-kaniko
     resources:
       memory: highmem
-      storage: 10GiB
+      storage: 10Gi
     inputs:
       - from: /repo/ci
         to: /io/repo/ci
