--- a/build.yaml
+++ b/build.yaml
@@ -2435,8 +2435,8 @@ steps:
       export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
       export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
       export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
       export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
       export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
       export HAIL_TOKEN="{{ token }}"
@@ -2505,8 +2505,8 @@ steps:
       export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
       export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
       export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
       export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
       export HAIL_TOKEN="{{ token }}"
@@ -2575,8 +2575,8 @@ steps:
       export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
       export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
       export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
       export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
       export HAIL_TOKEN="{{ token }}"
@@ -2645,8 +2645,8 @@ steps:
       export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
       export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
       export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
       export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
       export HAIL_TOKEN="{{ token }}"
@@ -2715,8 +2715,8 @@ steps:
       export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
       export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
       export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
       export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
       export HAIL_TOKEN="{{ token }}"
@@ -2938,8 +2938,8 @@ steps:
       export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
       export PYTEST_SPLITS=5
       export PYTEST_SPLIT_INDEX=0
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
       hailctl config set batch/billing_project test
       hailctl config set batch/bucket hail-test-dmk9z
@@ -2990,8 +2990,8 @@ steps:
       export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
       export PYTEST_SPLITS=5
       export PYTEST_SPLIT_INDEX=1
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
       hailctl config set batch/billing_project test
       hailctl config set batch/bucket hail-test-dmk9z
@@ -3042,8 +3042,8 @@ steps:
       export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
       export PYTEST_SPLITS=5
       export PYTEST_SPLIT_INDEX=2
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
       hailctl config set batch/billing_project test
       hailctl config set batch/bucket hail-test-dmk9z
@@ -3094,8 +3094,8 @@ steps:
       export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
       export PYTEST_SPLITS=5
       export PYTEST_SPLIT_INDEX=3
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
       hailctl config set batch/billing_project test
       hailctl config set batch/bucket hail-test-dmk9z
@@ -3146,8 +3146,8 @@ steps:
       export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
       export PYTEST_SPLITS=5
       export PYTEST_SPLIT_INDEX=4
-      export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
-      export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+      export DOCKER_PREFIX="{{ global.docker_prefix }}"
+      export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
       export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
       hailctl config set batch/billing_project test
       hailctl config set batch/bucket hail-test-dmk9z
