[ci] replace BuildImageStep with BuildImage2Step (#10391)
* [ci] replace BuildImageStep with BuildImage2Step

* fix lint

* lint fix

* fix

* fxi

* use more memory and space for base image

* fix

--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -47,6 +47,10 @@ steps:
     dockerFile: /io/repo/docker/Dockerfile.base
     contextPath: /io/repo
     publishAs: base
+    resources:
+      storage: 10Gi
+      cpu: "2"
+      memory: 7.5Gi
     inputs:
       - from: /repo
         to: /io/repo
