--- a/build.yaml
+++ b/build.yaml
@@ -2243,6 +2243,8 @@ steps:
         script: /io/sql/fix-provisioning-bug.sql
       - name: do-not-lock-entire-batch
         script: /io/sql/do-not-lock-entire-batch.sql
+      - name: add-fail-fast
+        script: /io/sql/add-fail-fast.sql
     inputs:
       - from: /repo/batch/sql
         to: /io/sql
