Add auth-gsa-key mount for create_accounts

--- a/build.yaml
+++ b/build.yaml
@@ -425,6 +425,10 @@ steps:
         namespace:
           valueFrom: default_ns.name
         mountPath: /deploy-config
+      - name: auth-gsa-key
+        namespace:
+          valueFrom: default_ns.name
+        mountPath: /auth-gsa-key
     inputs:
       - from: /repo/ci/bootstrap_create_accounts.py
         to: /io/bootstrap_create_accounts.py
