--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [tool.black]
 line-length = 120
 skip-string-normalization = true
-exclude = 'hail|datasets|sql|\.mypy'
+force-exclude = 'hail|datasets|sql|\.mypy'
