--- a/ci/bootstrap.yaml
+++ b/ci/bootstrap.yaml
@@ -69,3 +69,22 @@ roleRef:
   kind: ClusterRole
   name: auth-driver
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: admin
+  namespace: default
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: default-admin-cluster-admin-binding
+subjects:
+- kind: ServiceAccount
+  name: admin
+  namespace: default
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: ""
