[query-service] uploading the query jar depends on the gsa keys

--- a/build.yaml
+++ b/build.yaml
@@ -2464,6 +2464,7 @@ steps:
       - base_image
       - build_hail_jar_only
       - merge_code
+      - create_test_gsa_keys
   - kind: deploy
     name: deploy_query
     namespace:
