[js] add scaffolding for typescript batch front ends with react and svelte

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ hs_err_pid*.log
 *hail/python/hail/docs/tutorials/data*
 *hail/python/hailtop/pipeline/docs/output*
 .mypy_cache/
+node_modules
 *.out
 GPATH
 GRTAGS
