[batch] Catch 500 error messages in dev ui pages

--- a/batch/deployment.yaml
+++ b/batch/deployment.yaml
@@ -86,6 +86,8 @@ spec:
          - name: HAIL_SHOULD_PROFILE
            value: "1"
 {% endif %}
+         - name: HAIL_SCOPE
+           value: "{{ scope }}"
 {% if deploy %}
          - name: HAIL_BATCH_BUCKET_NAME
            valueFrom:
@@ -222,6 +224,8 @@ spec:
            value: "{{ global.k8s_server_url }}"
          - name: HAIL_SHA
            value: "{{ code.sha }}"
+         - name: HAIL_SCOPE
+           value: "{{ scope }}"
 {% if deploy %}
          - name: HAIL_BATCH_BUCKET_NAME
            valueFrom:
